--- a/style.css
+++ b/style.css
@@ -121,4 +121,26 @@ img {
 
 /* TABLET VIEW */
 
+@media screen and (max-width:810px) and (min-width:420px){
+  .row {
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0;
+    padding-bottom: 15px;
+  }
+
+  body{
+    background-color: lightskyblue;
+  }
+
+  #steps{
+    background-color: transparent;
+  }
+
+  #why{
+    background-color: rgba(255, 255, 255, .5);
+  }
+}
+
 
